--- a/block-BJaaed/code/index.html
+++ b/block-BJaaed/code/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <section class="main">
+
+    </section>
     <script src="./script.js"></script>
   </body>
 </html>
