--- a/block-BJaaef/code/index.html
+++ b/block-BJaaef/code/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="header"></header>
+    <section class="main">
+
+    </section>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
